# picocode

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  REST_API.md  main.py  pyproject.toml
.github/workflows/: kotlin-ci.yml
ai/: __init__.py  analyzer.py  llama_embeddings.py  llama_integration.py  openai.py
db/: __init__.py  connection.py  db_task.py  db_writer.py  models.py  operations.py  vector_operations.py
endpoints/: __init__.py  project_endpoints.py  query_endpoints.py  rate_limiter.py  web_endpoints.py
ide-plugins/: README.md  build.gradle.kts
ide-plugins/src/main/kotlin/com/MyCodeRAG/: MyCodeRAGConfigurable.kt  MyCodeRAGSettings.kt  MyCodeRAGStatusBarWidget.kt  MyCodeRAGToolWindowContent.kt
services/: dependency_service.py  dependency_usage.py  project_service.py  search_service.py
static/css/: style.css
static/js/: main.js
templates/: index.html
utils/: __init__.py  cache.py  config.py  file_watcher.py  logger.py  retry.py  simple_vector_store.py
